--- a/index.html
+++ b/index.html
@@ -100,13 +100,57 @@
 					<input type="radio" name="player" id="4" checked="checked">
 					<label for="4">4 Player</label>
 					<div class="play">
-						<label class="back-mm">Back to main menu</label>
-						<label class="playgame">Play</label>
+						<label class="back-mm"><img src="images/arrow-back-128.png" alt="">Main Menu</label>
+						<label class="playgame"><img src="images/icon-play-128.png" alt="">Play</label>
 					</div>
 				</div>
 
 			</div>
 		</div>
+
+		<div class="modalRules">
+			<div class="modalRulesInner">
+				<div class="logo logo-small ex-logo-small">
+					<div>
+						<img src="images/ludo.png" alt="" width="80">
+					</div>
+					<h2><span>The Classic</span> Ludo </h2>
+				</div>
+
+				<h4>Rules</h4>
+
+				<div class="ruleInfo">
+					<h5>Equipment</h5>
+					<p>A Ludo board is is square with a pattern on it in the shape of a cross, each arm being divided into three adjacent columns of eight squares.  The middle squares form the home column for each colour and cannot be landed upon by other colours. The middle of the cross forms a large square which is the 'home' area and which is divided into 4 home triangles, one of each colour. At each corner, separate to the main circuit are coloured circles (or squares) where the pieces are placed to begin.</p>
+					<p>Counters start their circuit one square in from the end of the arm and adjacent to the starting circle. Avoid modern boards which incorrectly place the first square at the end of the arm.</p>
+					<p>The starting square, the starting circle, the home triangle and all the home column squares are coloured to match the corresponding pieces.</p>
+					<p>Each player chooses one of the 4 colours (green, yellow, red or blue) and places the 4 pieces of that colour in the corresponding starting circle. A single die is thrown to determine movement.</p>
+
+					<h5>Play</h5>
+					<p>Players take turns in a clockwise order; highest throw of the die starts.</p>
+					<p>Each throw, the player decides which piece to move. A piece simply moves in a clockwise direction around the track given by the number thrown. If no piece can legally move according to the number thrown, play passes to the next player.</p>
+					<p>A throw of 6 gives another turn.</p>
+					<p>A player must throw a 6 to move a piece from the starting circle onto the first square on the track. The piece moves 6 squares around the circuit beginning with the appropriately coloured start square (and the player then has another turn).</p>
+					<p>If a piece lands on a piece of a different colour, the piece jumped upon is returned to its starting circle.</p>
+					<p>If a piece lands upon a piece of the same colour, this forms a block. This block cannot be passed or landed on by any opposing piece.</p>
+
+					<h5>Winning</h5>
+					<p>When a piece has circumnavigated the board, it proceeds up the home column. A piece can only be moved onto the home triangle by an exact throw.</p>
+					<p>The first person to move all 4 pieces into the home triangle wins.</p>
+
+					<h5>Recommended variants</h5>
+					<p>For young children, a piece may start with a throw of a 1 or a 6. Speeds things up.</p>
+					<p>For adults, to make Ludo a lot more interesting and skilful, try using the rules for Pachisi and Chaupur or Uckers.</p>
+				</div>
+				<div class="multiplayer">
+					<div class="play">
+						<label class="back-mm"><img src="images/arrow-back-128.png" alt="">Main Menu</label>
+						<label class="playgame"><img src="images/icon-play-128.png" alt="">Play</label>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 
 	<div class="win-message" style="display: none">
@@ -117,7 +161,7 @@
 		    		<img src="images/congratulations.gif" alt="">
 		    	</div>
 		    	<div class="win-info">
-		    		<h3>Red Player Win</h3>
+		    		<h3></h3>
 		    	</div>
 	    	</div>
 	    </div>
