worked on the modification

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 					<div class="ludoBoardBox" data-red="5" data-yellow="18" data-blue="31" data-green="44"></div>
 					<div class="ludoBoardBox redStep" style="background: #EC1C23" data-red="56"></div>
 					<div class="ludoBoardBox" data-red="45" data-yellow="6" data-blue="19" data-green="32"></div>
-					<div class="ludoBoardBox" data-red="4" data-yellow="17" data-blue="30"></div>
+					<div class="ludoBoardBox" data-red="4" data-yellow="17" data-blue="30" data-green="43"></div>
 					<div class="ludoBoardBox redStep" style="background: #EC1C23" data-red="55"></div>
 					<div class="ludoBoardBox" data-red="46" data-yellow="7" data-blue="20" data-green="33"></div>
 					<div class="ludoBoardBox" data-red="3" data-yellow="16" data-blue="29" data-green="42"></div>
