--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 	<!-- Sounds -->
 
-	<audio id="audioDiceSoundBible" src="sound/dice-sound.mp3"></audio>
-	<audio id="btnsound" src="sound/btn-move.mp3"></audio>
-	<audio id="punch" src="sound/btn-cut.mp3"></audio>
-	<audio id="completed" src="sound/gotohome.mp3"></audio>
-	<audio id="ohho" src="sound/btn-not-cut.mp3"></audio>
-	<audio loop id="bg" src="sound/game-menu-looping.mp3"></audio>
+	<audio id="audioDiceSoundBible" src="sounds/dice-sound.mp3"></audio>
+	<audio id="btnsound" src="sounds/btn-move.mp3"></audio>
+	<audio id="punch" src="sounds/btn-cut.mp3"></audio>
+	<audio id="completed" src="sounds/gotohome.mp3"></audio>
+	<audio id="ohho" src="sounds/btn-not-cut.mp3"></audio>
+	<audio loop id="bg" src="sounds/game-menu-looping.mp3"></audio>
 	
 	<!-- Sounds -->
 
