--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 	<!-- Win Message -->
 	<div class="win-message" style="display: none">
-		<audio id="win" src="win.mp3" loop></audio>
+		<audio id="win" src="sounds/win.mp3" loop></audio>
 	    <div id="imgs">
 	    	<div class="win-info-inner">
 		    	<div class="cong-msg">
