--- a/index.html
+++ b/index.html
@@ -169,11 +169,27 @@
 		    	</div>
 		    	<div class="win-info">
 		    		<h3></h3>
+		    		<div class="playagain">
+						<label class="playgame"><img src="images/icon-play.png" alt="">Play Again</label>
+					</div>
 		    	</div>
 	    	</div>
 	    </div>
 	</div>
 	<!-- Win Message -->
+
+	<div class="game-options">
+		<ul>
+			<li class="sound">
+				<a href="javascript:void(0)">
+					<img src="images/sound-on.svg" alt="" class="sound-on">
+					<img src="images/sound-off.svg" alt="" class="sound-off">
+				</a>
+			</li>
+			<li class="rules"><a href="javascript:void(0)"><img src="images/rules.svg" alt=""></a></li>
+			<li class="power-off"><a href="javascript:void(0)"><img src="images/power-off.png" alt=""></a></li>
+		</ul>
+	</div>
 
 	<div class="ludo">
 		<div class="board">
